Fix after review

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -50,7 +50,7 @@
       }
     },
     "ParticipationPage": {
-      "MainTitle": "PARTICIPATION PAGE",
+      "Title": "Here’s how to participate",
       "Step1": {
         "Step": "STEP 1",
         "Time": "10-15 minutes",
