DDP-6270 replace dashboard link with prism link for brain study

--- a/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-brain/src/assets/i18n/en.json
@@ -42,6 +42,7 @@
         "AboutUs": "About Us",
         "Data": "Data",
         "Dashboard": "Dashboard",
+        "Prism": "Prism",
         "Menu": "Menu"
     },
     "LearnMoreSection": {
