--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -711,7 +711,7 @@
             "MaxSize": "Max size: {{maxSize}}",
             "AllowedFileTypes": "Allowed files: {{allowedFileTypes}}",
             "ChooseFile": "Click and select \nor drag file to upload",
-            "Uploaded": "Uploaded:",
+            "Uploading": "Uploading {{filename}}",
             "Size": "(size: {{size}})",
             "MaxSizeErrorMessage": "Maximum file size exceeded",
             "InvalidTypeErrorMessage": "Type of file selected is not valid"
