--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -538,18 +538,18 @@
     }
   },
   "EnrollmentStatus": {
-    "Prefix": "[FR] Enrollment Status: ",
-    "ContactUsTooltip": "[FR] +1 954.481.6611 or support@atfamilies.org",
+    "Prefix": "État de l’inscription: ",
+    "ContactUsTooltip": "+1 954.481.6611 or support@atfamilies.org",
     "Messages": {
-      "Registered": "[FR] Registered",
-      "Consented": "[FR] Consented",
-      "ConsentedNeedsAssent": "[FR] Consented, Needs Assent",
-      "SubmittedPhysicianInfo": "[FR] Submitted Physician Info",
-      "SubmittedMedicalHistory": "[FR] Submitted Medical History",
-      "SubmittedGenomeStudyShippingInfo": "[FR] Submitted Genome Study Shipping Info",
-      "SubmittedEnrollment": "[FR] Submitted Enrollment / Pending Confirmation",
-      "Enrolled": "[FR] Enrolled",
-      "ContactUs": "[FR] Please Contact Us"
+      "Registered": "Enregistré",
+      "Consented": "Consentement donné",
+      "ConsentedNeedsAssent": "Consentement donné, assentiment requis",
+      "SubmittedPhysicianInfo": "Coordonnées du médecin fournies",
+      "SubmittedMedicalHistory": "Antécédents médicaux soumis",
+      "SubmittedGenomeStudyShippingInfo": "Étude du génome achevée",
+      "SubmittedEnrollment": "Inscription soumise, en attente de confirmation",
+      "Enrolled": "Inscrit",
+      "ContactUs": "Veuillez nous contacter"
     }
   }
 }
