--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -538,18 +538,18 @@
     }
   },
   "EnrollmentStatus": {
-    "Prefix": "[PL] Enrollment Status: ",
-    "ContactUsTooltip": "[PL] +1 954.481.6611 or support@atfamilies.org",
+    "Prefix": "Status rekrutacji: ",
+    "ContactUsTooltip": "+1 954.481.6611 or support@atfamilies.org",
     "Messages": {
-      "Registered": "[PL] Registered",
-      "Consented": "[PL] Consented",
-      "ConsentedNeedsAssent": "[PL] Consented, Needs Assent",
-      "SubmittedPhysicianInfo": "[PL] Submitted Physician Info",
-      "SubmittedMedicalHistory": "[PL] Submitted Medical History",
-      "SubmittedGenomeStudyShippingInfo": "[PL] Submitted Genome Study Shipping Info",
-      "SubmittedEnrollment": "[PL] Submitted Enrollment / Pending Confirmation",
-      "Enrolled": "[PL] Enrolled",
-      "ContactUs": "[PL] Please Contact Us"
+      "Registered": "Zarejestrowany",
+      "Consented": "Zgoda udzielona",
+      "ConsentedNeedsAssent": "Zgoda udzielona, konieczna zgoda osoby małoletniej",
+      "SubmittedPhysicianInfo": "Przekazano dane kontaktowe lekarza",
+      "SubmittedMedicalHistory": "Przekazano dokumentację medyczną",
+      "SubmittedGenomeStudyShippingInfo": "Przekazano informacje dotyczące wysyłki do badania genomu",
+      "SubmittedEnrollment": "Złożono wniosek o włączenie/oczekiwanie na potwierdzenie",
+      "Enrolled": "Uczestnik włączony",
+      "ContactUs": "Prosimy o kontakt"
     }
   }
 }
