--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -538,18 +538,18 @@
     }
   },
   "EnrollmentStatus": {
-    "Prefix": "[RU] Enrollment Status: ",
-    "ContactUsTooltip": "[RU] +1 954.481.6611 or support@atfamilies.org",
+    "Prefix": "Статус регистрации: ",
+    "ContactUsTooltip": "+1 954.481.6611 или по адресу support@atfamilies.org",
     "Messages": {
-      "Registered": "[RU] Registered",
-      "Consented": "[RU] Consented",
-      "ConsentedNeedsAssent": "[RU] Consented, Needs Assent",
-      "SubmittedPhysicianInfo": "[RU] Submitted Physician Info",
-      "SubmittedMedicalHistory": "[RU] Submitted Medical History",
-      "SubmittedGenomeStudyShippingInfo": "[RU] Submitted Genome Study Shipping Info",
-      "SubmittedEnrollment": "[RU] Submitted Enrollment / Pending Confirmation",
-      "Enrolled": "[RU] Enrolled",
-      "ContactUs": "[RU] Please Contact Us"
+      "Registered": "Зарегистрирован",
+      "Consented": "Согласие получено",
+      "ConsentedNeedsAssent": "Согласие получено, требуется согласие от несовершеннолетнего лица",
+      "SubmittedPhysicianInfo": "Отправленная информация для контакта с врачом",
+      "SubmittedMedicalHistory": "Отправленные медицинские данные",
+      "SubmittedGenomeStudyShippingInfo": "Отправленная информация об отправке исследования генома",
+      "SubmittedEnrollment": "Отправленное подтверждение регистрации/ожидание решения",
+      "Enrolled": "Зарегистрирован",
+      "ContactUs": "Просим связываться с нами по телефону"
     }
   }
 }
