--- a/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-angio/src/assets/i18n/en.json
@@ -719,6 +719,10 @@
             "InvalidTypeErrorMessage": "Type of file selected is not valid",
             "CancelUpload": "Cancel upload",
             "RemoveUploadedFile": "Remove uploaded file"
+        },
+        "AdminActionPanel": {
+            "ActivityEdit": "Click the Edit button to temporarily unlock for editing. Your edits will be saved as you go. When you click submit or navigate away, the activity will be locked again automatically.",
+            "EditButton": "Edit"
         }
     }
 }
