Rare-X: Fix build errors

--- a/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rarex/src/assets/i18n/en.json
@@ -382,6 +382,9 @@
       "SignIn": "Log In",
       "SignOut": "Log Out"
     },
+    "Title": {
+      "Alert": "RARE-X"
+    },
     "StartButton": "Start",
     "ContinueButton": "Continue",
     "SubmitButton": "Submit",
