A-T: Add session expired login button text

--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/de.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Aufklappen"
+      },
+      "Login": {
+        "Title": "Anmelden"
       }
     },
     "Navigation": {
