--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Expand"
+      },
+      "Login": {
+        "Title": "Sign In"
       }
     },
     "Navigation": {
