--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Développer"
+      },
+      "Login": {
+        "Title": "Connexion"
       }
     },
     "Navigation": {
