--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/hi.json
@@ -259,6 +259,9 @@
       },
       "Expand": {
         "Title": "विस्तृत करें"
+      },
+      "Login": {
+        "Title": "साइन इन करें"
       }
     },
     "Navigation": {
