--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Espandi"
+      },
+      "Login": {
+        "Title": "Accedi"
       }
     },
     "Navigation": {
