--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ja.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "展開する"
+      },
+      "Login": {
+        "Title": "サインイン"
       }
     },
     "Navigation": {
