--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Rozwiń"
+      },
+      "Login": {
+        "Title": "Zaloguj się"
       }
     },
     "Navigation": {
