--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/ru.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Развернуть"
+      },
+      "Login": {
+        "Title": "Войти"
       }
     },
     "Navigation": {
