--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/tr.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Genişlet"
+      },
+      "Login": {
+        "Title": "Oturum Aç"
       }
     },
     "Navigation": {
