--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
@@ -254,6 +254,9 @@
       },
       "Expand": {
         "Title": "展开"
+      },
+      "Login": {
+        "Title": "签到"
       }
     },
     "Navigation": {
