--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/es.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Ampliar"
+      },
+      "Login": {
+        "Title": "Iniciar sesión"
       }
     },
     "Navigation": {
