--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pt.json
@@ -249,6 +249,9 @@
       },
       "Expand": {
         "Title": "Expandir"
+      },
+      "Login": {
+        "Title": "Registre-se"
       }
     },
     "Navigation": {
