--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/en.json
@@ -201,92 +201,104 @@
                 "Collapse": "Collapse all",
                 "MoreFAQs": "More FAQs"
             },
-            "Question1": {
-                "Question": "What is Count Me In?",
-                "Answer": "Count Me In is a nonprofit research initiative that enables patients to accelerate cancer research by sharing their samples, their clinical information, and their voices. With patient consent, all data collected by and generated through Count Me In are shared regularly with the research community (after being stripped of identifying information) through freely available scientific databases, so researchers anywhere can help rapidly accelerate the pace of discovery, expand our understanding of cancer, and develop new treatment strategies – breaking down silos that exist in cancer research."
-            },
-            "Question2": {
-                "Question": "Why is this needed?",
-                "Answer": "Patients have the power to advance cancer research in a way that no one else can. Patients’ medical records, tumor samples, and personal experiences hold clues—about which cancers will respond or become resistant to which therapies—that often can’t be found in research labs or clinical trials. \nThe majority of patients have never had the opportunity to participate in research—because most cancer patients are cared for in community settings where this type of research is not done; most patients have never been asked if they’d like to contribute their tissue samples and medical information for research.\nAnswering many important questions about cancer will require engaging and empowering many more patients as partners, and offering the opportunity to participate in groundbreaking research to all people living with cancer, whether they live near a research hospital or not. Count Me In aims to help make that possible."
-            },
-            "Question3": {
-                "Question": "How can I participate?",
-                "Answer": {
-                    "Section1": {
-                        "TextPt1": "If you or your child have ever been diagnosed with cancer, and reside in the United States, United States territories- including Puerto Rico, or Canada, you can sign up by clicking “Count Me In”. ",
-                        "Link": "Click here",
-                        "TextPt2": " to learn more about participation."
-                    },
-                    "Section2": "If you’re a cancer researcher, you can access the data generated through Count Me In projects through existing publicly available databases, such as the cBioPortal for Cancer Genomics and the National Cancer Institute’s Genomic Data Commons. You can also join our mailing list for updates about new data releases and publications."
+            "Questions": [
+                {
+                    "Question": "What is Count Me In?",
+                    "Paragraphs": [
+                        "Count Me In is a nonprofit research initiative that enables patients to accelerate cancer research by sharing their samples, their clinical information, and their voices. With patient consent, all data collected by and generated through Count Me In are shared regularly with the research community (after being stripped of identifying information) through freely available scientific databases, so researchers anywhere can help rapidly accelerate the pace of discovery, expand our understanding of cancer, and develop new treatment strategies – breaking down silos that exist in cancer research."
+                    ]
+                },
+                {
+                    "Question": "Why is this needed?",
+                    "Paragraphs": [
+                        "Patients have the power to advance cancer research in a way that no one else can. Patients’ medical records, tumor samples, and personal experiences hold clues—about which cancers will respond or become resistant to which therapies — that often can’t be found in research labs or clinical trials. \nThe majority of patients have never had the opportunity to participate in research—because most cancer patients are cared for in community settings where this type of research is not done; most patients have never been asked if they’d like to contribute their tissue samples and medical information for research. \nAnswering many important questions about cancer will require engaging and empowering many more patients as partners, and offering the opportunity to participate in groundbreaking research to all people living with cancer, whether they live near a research hospital or not. Count Me In aims to help make that possible."
+                    ]
+                },
+                {
+                    "Question": "How can I participate?",
+                    "Paragraphs": [
+                        "If you or your child have ever been diagnosed with cancer, and reside in the United States, United States territories- including Puerto Rico, or Canada, you can sign up by clicking “Count Me In”. <a class='Link' href='/participation'>Click here</a> to learn more about participation.",
+                        "If you’re a cancer researcher, you can access the data generated through Count Me In projects through existing publicly available databases, such as the cBioPortal for Cancer Genomics and the National Cancer Institute’s Genomic Data Commons. You can also join our mailing list for updates about new data releases and publications."
+                    ]
+                },
+                {
+                    "Question": "What does Count Me In do with the data?",
+                    "Paragraphs": [
+                        "After removing all personal information that would readily identify individuals, data is shared freely in an effort to accelerate discoveries, enabling researchers to identify patterns in data. Batches of data are released publicly on a regular basis, and are available to all researchers—so that everyone may use the data to make discoveries and advance progress against cancer, including new medicines and diagnostics.",
+                        "Quick links to released data: \n<a class='Link' href='https://www.mbcproject.org/data-release'>https://www.mbcproject.org/data-release</a>\n<a class='Link' href='https://ascproject.org/data-release'>https://ascproject.org/data-release</a>"
+                    ]
+                },
+                {
+                    "Question": "How have patients been involved in Count Me In?",
+                    "Paragraphs": [
+                        "Count Me In has worked closely with patients, parents, loved ones and patient advocates within several cancer communities from the beginning of the first project, the Metastatic Breast Cancer Project, launched in 2015. Patients have been included in all aspects of the design including concept, goals, messaging, forms, and the website."
+                    ]
+                },
+                {
+                    "Question": "How is Count Me In addressing inclusivity in participation?",
+                    "Paragraphs": [
+                        "Count Me In understands that many barriers exist - structural and historical - that prevent underrepresented and marginalized communities from directly participating in research. Count Me In is committed to the core principle that every cancer patient, regardless of where they live, what language they speak, what their heritage may be - that their experience matters and the inclusion of their experience is imperative in furthering our understanding of cancer.",
+                        "Traditional cancer research does not lend itself to being as inclusive as it should be. Cancer disparities exist as evidence of how much more work in this space needs to be done - and it’s one in which we recognize that we’ll never truly arrive - but continue to strive for, alongside patients. We believe patients should be direct partners in cancer research and know that we can only advance our understanding of cancer and accelerate discoveries, if we do so together."
+                    ]
+                },
+                {
+                    "Question": "How can I receive updates on Count Me In?",
+                    "Paragraphs": [
+                        "Please <a class='Link' href='/join-list'>sign up for our mailing list</a> to receive updates"
+                    ]
+                },
+                {
+                    "Question": "Will I be paid to take part in this research study?",
+                    "Paragraphs": [
+                        "You will not be paid to take part in this study."
+                    ]
+                },
+                {
+                    "Question": "Are there costs to take part in this research study?",
+                    "Paragraphs": [
+                        "There are no costs to take part in this study."
+                    ]
+                },
+                {
+                    "Question": "Is this a clinical trial?",
+                    "Paragraphs": [
+                        "Count Me In is not a clinical trial. Joining will not have any impact on a participant’s course of care, and Count Me In is not permitted to give any clinical advice as part of participation in this project."
+                    ]
+                },
+                {
+                    "Question": "Can I stop taking part in Count Me In?",
+                    "Paragraphs": [
+                        "You can stop participating in Count Me In at any time. However, information that has already been used for research will not be able to be withdrawn. To withdraw your permission, reach out to the study team at info@joincountmein.org.",
+                        "If you withdraw, any remaining tissue samples will be returned to where they were obtained, and any remaining saliva and/or blood samples will be destroyed. No additional tests will be performed on the samples. Additionally, no additional medical records will be collected, and any copies of medical records will be destroyed. However, the results from the tests done and any information learned from your medical records before you stopped participating will be kept."
+                    ]
+                },
+                {
+                    "Question": "If I choose to share tissue sample(s), will my samples be used up?",
+                    "Paragraphs": [
+                        "Count Me In will take every measure to ensure that samples are not used up as a result of these studies. Pathologists who have access to stored tumor samples will be asked to share only a small portion. If there doesn’t appear to be enough to allow for future clinical testing, Count Me In will not request for samples. Any excess tissue will be sent back."
+                    ]
+                },
+                {
+                    "Question": "What does Count Me In do with copies of medical records?",
+                    "Paragraphs": [
+                        "Medical records provide valuable information about experiences with cancer. From medical records, researchers can learn important details like what treatments you received and how long you received them for, details about the pathology of your tumor(s), information about your cancer at diagnosis, and more.",
+                        "For researchers studying cancer, it is valuable to be able to look at medical record information with the information from your samples in order to make discoveries."
+                    ]
+                },
+                {
+                    "Question": "Why is Count Me In studying specific cohorts?",
+                    "Paragraphs": [
+                        "A cohort is a group of people sharing a similar set of characteristics. This could include various demographic information, cancer types, mutation types, responses to treatment, and more. By studying specific cohorts in-depth, researchers can find patterns and detect trends that may help us better understand various aspects of cancer."
+                    ]
+                },
+                {
+                    "Question": "If I have signed up on behalf of my child, what happens when they become an adult?",
+                    "Paragraphs": [
+                        "When your child reaches the age where they can consent for themselves, they need to do so to continue to participate. For the US and Canada, this varies by state and territory, and is between ages of 18 and 21. Count Me In will contact you prior to this age to get your child’s contact information.",
+                        "If your child chooses to remain in the study  the project team will continue to request medical records and tissue samples from any point in your child’s cancer treatment."
+                    ]
                 }
-            },
-            "Question4": {
-                "Question": "What does Count Me In do with the data?",
-                "Answer": {
-                    "Section1": "After removing all personal information that would readily identify individuals, data is shared freely in an effort to accelerate discoveries, enabling researchers to identify patterns in data. Batches of data are released publicly on a regular basis, and are available to all researchers—so that everyone may use the data to make discoveries and advance progress against cancer, including new medicines and diagnostics.",
-                    "Section2": "Quick links to released data:"
-                }
-            },
-            "Question5": {
-                "Question": "How have patients been involved in Count Me In?",
-                "Answer": "Count Me In has worked closely with patients, parents, loved ones and patient advocates within several cancer communities from the beginning of the first project, the Metastatic Breast Cancer Project, launched in 2015. Patients have been included in all aspects of the design including concept, goals, messaging, forms, and the website."
-            },
-            "Question6": {
-                "Question": "How is Count Me In addressing inclusivity in participation?",
-                "Answer": {
-                    "Section1": "Count Me In understands that many barriers exist - structural and historical - that prevent underrepresented and marginalized communities from directly participating in research. Count Me In is committed to the core principle that every cancer patient, regardless of where they live, what language they speak, what their heritage may be - that their experience matters and the inclusion of their experience is imperative in furthering our understanding of cancer.",
-                    "Section2": "Traditional cancer research does not lend itself to being as inclusive as it should be. Cancer disparities exist as evidence of how much more work in this space needs to be done - and it’s one in which we recognize that we’ll never truly arrive - but continue to strive for, alongside patients. We believe patients should be direct partners in cancer research and know that we can only advance our understanding of cancer and accelerate discoveries, if we do so together."
-                }
-            },
-            "Question7": {
-                "Question": "How can I receive updates on Count Me In?",
-                "Answer": {
-                    "TextPt1": "Please  ",
-                    "Link": "sign up for our mailing list",
-                    "TextPt2": " to receive updates"
-                }
-            },
-            "Question8": {
-                "Question": "Will I be paid to take part in this research study?",
-                "Answer": "You will not be paid to take part in this study."
-            },
-            "Question9": {
-                "Question": "Are there costs to take part in this research study?",
-                "Answer": "There are no costs to take part in this study."
-            },
-            "Question10": {
-                "Question": "Is this a clinical trial?",
-                "Answer": "Count Me In is not a clinical trial. Joining will not have any impact on a participant’s course of care, and Count Me In is not permitted to give any clinical advice as part of participation in this project."
-            },
-            "Question11": {
-                "Question": "Can I stop taking part in Count Me In?",
-                "Answer": {
-                    "Section1": "You can stop participating in Count Me In at any time. However, information that has already been used for research will not be able to be withdrawn. To withdraw your permission, reach out to the study team at info@joincountmein.org.",
-                    "Section2": "If you withdraw, any remaining tissue samples will be returned to where they were obtained, and any remaining saliva and/or blood samples will be destroyed. No additional tests will be performed on the samples. Additionally, no additional medical records will be collected, and any copies of medical records will be destroyed. However, the results from the tests done and any information learned from your medical records before you stopped participating will be kept."
-                }
-            },
-            "Question12": {
-                "Question": "If I choose to share tissue sample(s), will my samples be used up?",
-                "Answer": "Count Me In will take every measure to ensure that samples are not used up as a result of these studies. Pathologists who have access to stored tumor samples will be asked to share only a small portion. If there doesn’t appear to be enough to allow for future clinical testing, Count Me In will not request for samples. Any excess tissue will be sent back."
-            },
-            "Question13": {
-                "Question": "What does Count Me In do with copies of medical records?",
-                "Answer": {
-                    "Section1": "Medical records provide valuable information about experiences with cancer. From medical records, researchers can learn important details like what treatments you received and how long you received them for, details about the pathology of your tumor(s), information about your cancer at diagnosis, and more.",
-                    "Section2": "For researchers studying cancer, it is valuable to be able to look at medical record information with the information from your samples in order to make discoveries."
-                }
-            },
-            "Question14": {
-                "Question": "Why is Count Me In studying specific cohorts?",
-                "Answer": "A cohort is a group of people sharing a similar set of characteristics. This could include various demographic information, cancer types, mutation types, responses to treatment, and more. By studying specific cohorts in-depth, researchers can find patterns and detect trends that may help us better understand various aspects of cancer."
-            },
-            "Question15": {
-                "Question": "If I have signed up on behalf of my child, what happens when they become an adult?",
-                "Answer": {
-                    "Section1": "When your child reaches the age where they can consent for themselves, they need to do so to continue to participate. For the US and Canada, this varies by state and territory, and is between ages of 18 and 21. Count Me In will contact you prior to this age to get your child’s contact information.",
-                    "Section2": "If your child chooses to remain in the study  the project team will continue to request medical records and tissue samples from any point in your child’s cancer treatment."
-                }
-            }
+            ]
         },
         "Header": {
             "Logo": {
