--- a/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
@@ -15,6 +15,11 @@
         }
     },
     "App": {
+        "Navigation": {
+            "Home": "Home",
+            "Prequal": "Prequal",
+            "Dashboard": "Dashboard"
+        }
     },
     "Toolkit": {
         "Password": {
