--- a/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-basil/src/assets/i18n/en.json
@@ -23,7 +23,7 @@
     },
     "Toolkit": {
         "Password": {
-            "Title": "Please enter the site password",
+            "Title": "Site Gatekeeper",
             "Text": "Please enter the site password *",
             "InputPlaceholder": "Password",
             "PasswordWrongError": "Incorrect password. Please try again.",
@@ -49,6 +49,23 @@
         }
     },
     "SDK": {
+        "FinishButton": "Finish",
+        "SubmitButton": "Submit",
+        "CloseButton": "Close",
+        "AddButton": "ADD",
+        "CancelButton": "CANCEL",
+        "NextButton": "Next",
+        "PreviousButton": "Back",
+        "SavingButton": "Saving",
+        "EditButton": "View/Edit",
+        "SaveButton": "Save",
+        "DeleteButton": "Delete",
+        "ReviewButton": "View",
+        "AgreeButton": "I agree",
+        "NotAgreeButton": "I am not ready to agree",
+        "ValidateError": "Submission cannot proceed. Please review messages in form for details.",
+        "CommunicationError": "There was a problem saving your data. Please check the form and your answers before submitting",
+        "SaveError": "We're sorry but an error occurred",
         "SignInOut": {
             "SignIn": "Log In",
             "SignOut": "Log Out"
