--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/fr.json
@@ -544,6 +544,7 @@
     "Prefix": "État de l’inscription: ",
     "ContactUsTooltip": "+1 954.481.6611 or support@atfamilies.org",
     "Messages": {
+      "NotRegistered": "Non enregistré",
       "Registered": "Enregistré",
       "Consented": "Consentement donné",
       "ConsentedNeedsAssent": "Consentement donné, assentiment requis",
