--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/en.json
@@ -671,6 +671,7 @@
     "Prefix": "Enrollment Status: ",
     "ContactUsTooltip": "+1 954.481.6611 or support@atfamilies.org",
     "Messages": {
+      "NotRegistered": "Not Registered",
       "Registered": "Registered",
       "Consented": "Consented",
       "ConsentedNeedsAssent": "Consented, Needs Assent",
