--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/it.json
@@ -544,6 +544,7 @@
     "Prefix": "Stato dell'arruolamento: ",
     "ContactUsTooltip": "+1 954.481.6611 or support@atfamilies.org",
     "Messages": {
+      "NotRegistered": "Non registrato",
       "Registered": "Registrato",
       "Consented": "Consenso fornito",
       "ConsentedNeedsAssent": "Consenso fornito, necessita dell'assenso",
