--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/pl.json
@@ -544,6 +544,7 @@
     "Prefix": "Status rekrutacji: ",
     "ContactUsTooltip": "+1 954.481.6611 or support@atfamilies.org",
     "Messages": {
+      "NotRegistered": "Niezarejestrowany",
       "Registered": "Zarejestrowany",
       "Consented": "Zgoda udzielona",
       "ConsentedNeedsAssent": "Zgoda udzielona, konieczna zgoda osoby małoletniej",
