--- a/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
+++ b/ddp-workspace/projects/ddp-atcp/src/assets/i18n/zh.json
@@ -549,6 +549,7 @@
     "Prefix": "注册状态: ",
     "ContactUsTooltip": "+1 954.481.6611 or support@atfamilies.org",
     "Messages": {
+      "NotRegistered": "未注册",
       "Registered": "已注册",
       "Consented": "同意",
       "ConsentedNeedsAssent": "已知情同意，需要知情同意",
