TB12-56 and TB12-81 PR feedback

--- a/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-testboston/src/assets/i18n/en.json
@@ -67,7 +67,7 @@
       "Title": "We want to help our communities and learn more about COVID-19 infection patterns in the Boston area.",
       "Text": "TestBoston is a COVID-19 study supported by Brigham and Women's Hospital and the Broad Institute of MIT and Harvard.",
       "Code": "I have an invitation code",
-      "NoCode": "We are currently fully enrolled.  Please check back in for future updates!"
+      "Full": "We are currently fully enrolled.  Please check back in for future updates!"
     },
     "AboutSection": {
       "Title": "About the Study",
