Circadia: home page content fixes

--- a/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-circadia/src/assets/i18n/en.json
@@ -41,13 +41,7 @@
     },
     "About": {
       "Title": "About the Study",
-      "Paragraph": "The Circadia research study is focused on better understanding the genetics of circadian rhythm disorders. Circadian rhythms are an integral part of our functioning, regulating and syncing our human behavior and physiology with the external environment and the 24-hour day. While research has been able to identify core components of our molecular circadian clock, much is still unknown about the genetics and physiological mechanisms driving our circadian rhythms.",
-      "Subtitle": "Questions we are trying to answer:",
-      "Questions": [
-        "Duis aute irure dolor in reprehenderit in voluptate?",
-        "Excepteur sint occaecat cupidatat non proident?",
-        "Duis aute irure dolor in reprehenderit in voluptate?"
-      ]
+      "Paragraph": "The Circadia research study is focused on better understanding the genetics of circadian rhythm disorders. Circadian rhythms are an integral part of our functioning, regulating and syncing our human behavior and physiology with the external environment and the 24-hour day. While research has been able to identify core components of our molecular circadian clock, much is still unknown about the genetics and physiological mechanisms driving our circadian rhythms."
     },
     "Participation": {
       "Title": "Participation",
@@ -59,7 +53,7 @@
     },
     "FAQ": {
       "Title": "Frequently Asked Questions",
-      "Description": "If your question is not answered below, you can call or email our study staff at <a class=\"link\" href=\"tel:16171234567\">1-617-123-4567</a> or <a class=\"link\" href=\"mailto:info@circadiastudy.org\">info@circadiastudy.org</a>.",
+      "Description": "If your question is not answered below, you can call or email our study staff at <a class=\"link\" href=\"tel:16177267733\">1 (617) 726-7733</a> or <a class=\"link\" href=\"mailto:circadiastudy@mgh.harvard.edu\">circadiastudy@mgh.harvard.edu</a>.",
       "Questions": [
         {
           "Title": "Can anybody join this study?",
