DDP-6361 more translations

--- a/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
+++ b/ddp-workspace/projects/ddp-pancan/src/assets/i18n/es.json
@@ -57,7 +57,7 @@
                 },
                 "Step4": {
                     "Title": "PASO 4",
-                    "Description": "[ES]Learn with us along the way"
+                    "Description": "Aprenda junto con nosotros"
                 },
                 "LearnMoreAboutParticipationButton": "[ES]Learn more about participation"
             },
