RGP: Restyle info box on dashboard page & make FAQ link

--- a/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
+++ b/ddp-workspace/projects/ddp-rgp/src/assets/i18n/en.json
@@ -1048,8 +1048,12 @@
     "DashboardPage": {
         "Title": "Dashboard",
         "Info": {
-          "Paragraph1": "Thank you for your interest in the Rare Genomes Project. This page will provide you information about the steps regarding your involvement with the study.",
-          "Paragraph2": "If you have questions, browse our Frequently Asked Questions page or contact the study staff at <a href=\"tel:617-714-7395\">617-714-7395</a> or <a href=\"mailto:raregenomes@broadinstitute.org\">raregenomes@broadinstitute.org</a>."
+            "Paragraph1": "Thank you for your interest in the Rare Genomes Project. This page will provide you information about the steps regarding your involvement with the study.",
+            "Paragraph2": {
+                "Intro": "If you have questions, browse our ",
+                "Link": "Frequently Asked Questions",
+                "Closing": " page or contact the study staff at <a href=\"tel:617-714-7395\">617-714-7395</a> or <a href=\"mailto:raregenomes@broadinstitute.org\">raregenomes@broadinstitute.org</a>."
+            }
         },
         "StudyMessages": {
           "Title": "Study Messages",
